@@ -57,7 +57,7 @@ Her vil der i fremtiden være mere hjælp.
     <string name="NewDB">Ny database</string>
     <string name="NewDBSDCard">Ny database på SDCard</string>
     <string name="NewDBPath">Sti til ny database</string>
-    <string name="AutoIndex">Kan ikke hente auto index definitioner</string>
+    <string name="AutoIndex">SQLite gemmer ikke auto index definitioner</string>
     <string name="Message">Besked</string>
     <string name="Error">Fejl</string>
     <string name="NoFileName">Skal mindst give et filnavn</string>
